gccida/c3/get_memory_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/builtins.c:1275:14: error: expected expression
tree_int_cst::$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rdx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/builtins.c:1285:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &exp->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/builtins.c:1288:14: error: use of undeclared identifier 'p_int_cst'
low = ( tree)p_int_cst->low; 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/builtins.c:1289:29: error: use of undeclared identifier 'p_int_cst'
v5 = *( unsigned __int8 *)( p_int_cst->low + 16); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/builtins.c:1292:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &low->int_cst.int_cst; 
^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_memory_rtx/src/obj/builtins.o] Error 1
